# ocr_project1

./: CMakeLists.txt  README.md  a.py  help  install.sh  main.cpp  run.py  run.sh  textdetection.cpp  textdetection.py
tests/: input0.json  input1.json  input10.json  input11.json  input12.json  input13.json  input14.json  input15.json  input16.json  input17.json  input18.json  input19.json  input2.json  input20.json  input21.json  input22.json  input23.json  input24.json  input25.json  input26.json  input27.json  input28.json  input29.json  input3.json  input30.json  input31.json  input32.json  input34.json  input35.json  input36.json  input37.json  input38.json  input39.json  input4.json  input40.json  input41.json  input42.json  input43.json  input44.json  input45.json  (+154 more)
