cmake_minimum_required (VERSION 2.8)
project (ocr)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++11 -Wall -Werror")
find_package( OpenCV 3.1 REQUIRED )
#find_package( Tesseract 4.00 REQUIRED )
#find_package( Boost 1.54 COMPONENTS system filesystem program_options REQUIRED )
#include_directories(${Tesseract_INCLUDE_DIRS})
include_directories( ${Boost_INCLUDE_DIRS} )
link_directories(${Boost_LIBRARY_DIR})
#add_library(OCREngine src/OCREngine.cpp)
#include_directories(OCREngine ${CMAKE_CURRENT_SOURCE_DIR}/src)
add_executable(ocr main.cpp)

target_link_libraries( ocr ${OpenCV_LIBS} ${Boost_LIBRARIES})
